# abxy

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md
abxy/: App.cpp  App.hpp  BinaryDataLoader.hpp  BinaryDataLoader.inl  CMakeLists.txt  Entity.cpp  Entity.hpp  Entity2d.cpp  Entity2d.hpp  Exceptions.cpp  Exceptions.hpp  File.cpp  File.hpp  FileLoader.cpp  FileLoader.hpp  Font.cpp  Font.hpp  FontLoader.cpp  FontLoader.hpp  FormattedTextEntity.cpp  FormattedTextEntity.hpp  FormattedTextEntity2d.cpp  FormattedTextEntity2d.hpp  Formatter.cpp  Formatter.hpp  Formatter.inl  Game.cpp  Game.hpp  ImageDataLoader.cpp  ImageDataLoader.hpp  Key.cpp  Key.hpp  Matrix.cpp  Matrix.hpp  Matrix.inl  Model.cpp  Model.hpp  Mouse.cpp  Mouse.hpp  PngLoader.cpp  (+38 more)
abxy/GL/: GL.hpp  GLAttribRef.cpp  GLAttribRef.hpp  GLBufferRef.hpp  GLBufferRef.inl  GLCopyRef.hpp  GLCreateRef.hpp  GLProgram.cpp  GLProgram.hpp  GLProgramRef.cpp  GLProgramRef.hpp  GLSamplerRef.cpp  GLSamplerRef.hpp  GLShader.cpp  GLShader.hpp  GLShaderRef.cpp  GLShaderRef.hpp  GLTextureRef.hpp  GLTextureRef.inl  GLUniformBlockRef.cpp  GLUniformBlockRef.hpp  GLUniformRef.cpp  GLUniformRef.hpp  GLVertexArrayRef.cpp  GLVertexArrayRef.hpp
abxy/audio/: Sound.cpp  Sound.hpp
abxy/entity/: BaseEntity.cpp  BaseEntity.hpp  BranchEntity.cpp  BranchEntity.hpp  Entity.cpp  Entity.hpp  Entity3d.cpp  Entity3d.hpp  LoaderEntity.cpp  LoaderEntity.hpp  PassthroughEntity.cpp  PassthroughEntity.hpp  ProjectionEntity.hpp  ProjectionEntity.inl  WorldEntity.cpp  WorldEntity.hpp
abxy/loader/: BinaryDataLoader.hpp  BinaryDataLoader.inl  FileLoader.cpp  FileLoader.hpp  FontLoader.cpp  FontLoader.hpp  ImageDataLoader.cpp  ImageDataLoader.hpp  LoadData.hpp  Loader.hpp  LoaderCache.cpp  LoaderCache.hpp  PngLoader.cpp  PngLoader.hpp  ProgramLoader.cpp  ProgramLoader.hpp  ProgramLoaderCache.cpp  ProgramLoaderCache.hpp  ResourceLoader.hpp  ResourceLoader.inl  ShaderLoader.hpp  ShaderLoader.inl  SoundLoader.cpp  SoundLoader.hpp  TextureLoader.cpp  TextureLoader.hpp
abxy/math/: Matrix.cpp  Matrix.hpp  Matrix.inl  Vector2.cpp  Vector2.hpp  Vector3.cpp  Vector3.hpp  Vector4.cpp  Vector4.hpp
abxy/messages/: Message.cpp  Message.hpp  Message.inl
abxy/primitive/: BoundPrimitive.cpp  BoundPrimitive.hpp  Primitive.cpp  Primitive.hpp  PrimitiveData.cpp  PrimitiveData.hpp  Sprite.cpp  Sprite.hpp  SpriteAnimation.cpp  SpriteAnimation.hpp  SquarePrimitive.cpp  SquarePrimitive.hpp  TexturePrimitive.cpp  TexturePrimitive.hpp
abxy/projection/: Projection.cpp  Projection.hpp  ProjectionFrustum.cpp  ProjectionFrustum.hpp  ProjectionIdentity.cpp  ProjectionIdentity.hpp  ProjectionOrtho2d.cpp  ProjectionOrtho2d.hpp
abxy/util/: File.cpp  File.hpp  Logger.cpp  Logger.hpp  Path.cpp  Path.hpp  Path_linux.cpp  Path_mac.cpp  Split.cpp  Split.hpp
cmake/: AddPrefix.cmake  FindGLFW.cmake  FindOpenGLNoGLU.cmake  FindVorbis.cmake  defines.cmake
dependencies/UnitTest++/: Makefile
dependencies/libvorbis/: .gitignore
examples/: CMakeLists.txt  Pong.cpp  Random.cpp  Test.cpp
gamelib/: App.hpp  App.inl  BinaryDataLoader.hpp  BinaryDataLoader.inl  Entity.hpp  Entity.inl  Entity2d.hpp  Entity2d.inl  Exceptions.hpp  Exceptions.inl  File.hpp  File.inl  FileLoader.hpp  FileLoader.inl  Font.hpp  Font.inl  FontLoader.hpp  FontLoader.inl  FormattedTextEntity.hpp  FormattedTextEntity.inl  FormattedTextEntity2d.hpp  FormattedTextEntity2d.inl  Formatter.hpp  Formatter.inl  Game.hpp  Game.inl  ImageDataLoader.hpp  ImageDataLoader.inl  Key.hpp  Key.inl  Matrix.hpp  Matrix.inl  Mouse.hpp  Mouse.inl  Perspective.hpp  Perspective.inl  Perspective2d.hpp  Perspective2d.inl  PngLoader.hpp  PngLoader.inl  (+43 more)
gamelib/GL/: GL.hpp  GLAttribRef.hpp  GLAttribRef.inl  GLBufferRef.hpp  GLBufferRef.inl  GLProgram.hpp  GLProgram.inl  GLProgramRef.hpp  GLProgramRef.inl  GLSamplerRef.hpp  GLSamplerRef.inl  GLShader.hpp  GLShader.inl  GLShaderRef.hpp  GLShaderRef.inl  GLTextureRef.hpp  GLTextureRef.inl  GLUniformBlockRef.hpp  GLUniformBlockRef.inl  GLUniformRef.hpp  GLUniformRef.inl  GLVertexArrayRef.hpp  GLVertexArrayRef.inl
gamelib/audio/: Sound.hpp  Sound.inl
gamelib/messages/: Message.hpp  Message.inl
gamelib/utils/: Split.hpp
res/: CMakeLists.txt  font.fragment.shader  font.vertex.shader  lighting.fragment.shader  lighting.program  lighting.vertex.shader  standard.fragment.shader  standard.program  standard.vertex.shader  test.model
tests/: main.cpp
tests/messages/: MessageTest.hpp
utilities/blender-plugins/: model-exporter.py
